# turnzero

./: .gitignore  CLAUDE.md  LAPTOP_CLAUDE_MEMO.md  README.md  pyproject.toml
configs/ablation_a/: member_001.yaml  member_002.yaml  member_003.yaml  member_004.yaml  member_005.yaml
configs/ablation_b/: member_001.yaml  member_002.yaml  member_003.yaml  member_004.yaml  member_005.yaml
configs/ablation_c/: member_001.yaml  member_002.yaml  member_003.yaml  member_004.yaml  member_005.yaml
configs/ensemble/: member_001.yaml  member_002.yaml  member_003.yaml  member_004.yaml  member_005.yaml
docs/: CUR_TASK_SPLIT.md  PAPER_ANALYSIS.md  PROJECT_BIBLE.md  TECHNICAL_COMPANION.md  WEEK2_PLAN.md  WEEK3_PLAN.md  WEEK4_PLAN.md  WEEK5_PLAN.md
paper/: cs229.sty  milestone.tex  turnzero.tex
paper/milestone/: milestone.tex
scripts/: build_retrieval_index.py  eval_ablations.py  eval_baselines.py  generate_week2_plots.py  parse_sample_stats.py  run_cluster_analysis.py  run_final_figures.py  run_stress_test.py  run_supplementary_analysis.py  run_wave3a.py  run_wave3b.py  train_ablations.sh  train_ensemble.sh
tests/: test_action_space.py  test_assemble.py  test_canonicalize.py  test_cluster.py  test_parser.py  test_schemas.py  test_split.py  test_stats.py
turnzero/: action_space.py  cli.py  schemas.py
turnzero/data/: assemble.py  canonicalize.py  dataset.py  io_utils.py  parser.py  stats.py
turnzero/eval/: __init__.py  bootstrap.py  metrics.py  plots.py  risk_coverage.py  robustness.py
turnzero/models/: __init__.py  baselines.py  train.py  transformer.py
(+9 files in other folders)
