[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turnzero"
version = "0.1.0"
description = "Turn-zero OTS coach for Pokemon VGC Gen 9"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
turnzero = "turnzero.cli:cli"

[tool.setuptools.packages.find]
include = ["turnzero*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
